On platforms without pollable events, i.e., (only) the Mac, changed poll timeout from 250msec to 5msec, as a preliminary fix for bug #25108.  The real solution is pollable events on the Mac.  r={pinkerton, rjc, et al}  a=jar (yes, jar, I ran it on multiple Macs of as many different speeds as we could find, and tried different values)